--- a/roland-yan-website/index.html
+++ b/roland-yan-website/index.html
@@ -36,7 +36,7 @@
                 <li><a href="https://github.com/roland-yan" target="_blank"><i class="ri-github-fill"></i></a></li>
                 <li><a href="https://www.instagram.com/rolandyan2.0/" target="_blank"><i class="ri-instagram-fill"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/roland-yan/" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
-                <li><a href="C:\Users\Owner\Downloads\defolio-bootstrap-5-html-resume-template=y0002021mdecd100000007\defolio-bootstrap-5-html-resume-template\assets\files\Resume 3.6 1 PAGE - Roland.pdf" target="_blank"><i class="ri-pages-line"></i></a></li>
+                <li><a href="resume.pdf" target="_blank"><i class="ri-pages-line"></i></a></li>
               </ul>
               <!-- social -->
             </div> 
