--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
       <div class="container">
         <section>
             <h2 class="ds-heading">About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis interdum ante a porta blandit. Quisque velit tortor, ultricies in quam ut, luctus convallis metus. Nunc vitae felis rutrum, mattis justo quis, bibendum tellus. Integer bibendum eget dolor nec venenatis. Aliquam erat volutpat. Etiam et est vitae turpis accumsan vulputate. Curabitur et vehicula nisl, eu congue dolor. Vivamus nec hendrerit mi Nulla consequat tempor.</p>
+            <p>Hey everyone! I'm Roland (or Ray), a neuroengineering hopeful, futurist, and Technology-lover; dreaming of a cyber-enhanced future. 
+              Innovation excites me, and I never shy away from the dangers of exploration. Join me as I try to improve the world, little by little. </p>
             <div class="ds-button-sec text-center">
-                <a href="resume.pdf" download="" class="ds-button">Download Resume</a>
+                <a href="resume.pdf" class="ds-button">Download Resume</a>
             </div>
         </section>
       </div>
@@ -100,25 +101,30 @@
           <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
              <h2 class="ds-heading">Core Skills</h2>
              <ul class="ds-skills-list">
-               <li>JavaScript</li>
-               <li>Node.js</li>
-               <li>Express.js</li>
+               <li>Python</li>
+               <li>Benchling</li>
+               <li>R</li>
+               <li>Robotics</li>
+               <li>Neuroimaging</li>
+               <li>MatLab</li>
+               <li>Docker</li>
+               <li>CAD & CFD</li>
                <li>MongoDB</li>
-               <li>Vue.js</li>
-               <li>React</li>
-               <li>Sequelize</li>
                <li>Github</li>
-               <li>HTML</li>
+               <li>HTML & CSS</li>
              </ul>
           </div>
           <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
             <h2 class="ds-heading">Other Skills</h2>
             <ul class="ds-skills-list">
-              <li>Storyblok</li>
-              <li>PWAs</li>
-              <li>Responsive Web Design</li>
-              <li>React</li>
-              <li>Vuetify</li>
+              <li>Adobe</li>
+              <li>Public Speaking</li>
+              <li>Project Management</li>
+              <li>Agile SCRUM</li>
+              <li>Chemical Wet Lab</li>
+              <li>3D Printing</li>
+              <li>CNC Milling</li>
+              <li>Open Rocket</li>
             </ul>
           </div>
         </div>
@@ -133,22 +139,22 @@
         <div class="row ds-experience-list">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
               <section>
-                <span class="ds-year">2019 - Present</span>
-                <h3 class="ds-officename">Matrix Media Inc</h3>
-                <span class="ds-department">Full Stack developer</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum.</p>
+                <span class="ds-year">2022 - Present</span>
+                <h3 class="ds-officename">Columbia Engineering</h3>
+                <span class="ds-department">NSF REU Research Assistant</span>
+                <p>National Science Foundation REU Program. Developing Geothermal Energy Harvest Reactor research at the Carleton Laboratory at Columbia Engineering.</p>
                 <ul>
-                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>
-                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                  <li>Patented Research on geothermal energy exchangers. </li>
+                  <li>Presenting at the 16th International Symposium of Functionally Graded Materials</li>
                 </ul>
               </section>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
               <section>
-                <span class="ds-year">2018 - 2019</span>
-                <h3 class="ds-officename">Lexind</h3>
-                <span class="ds-department">Senior app developer</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum.</p>
+                <span class="ds-year">2022 - Present</span>
+                <h3 class="ds-officename">NYU Center for Neural Science</h3>
+                <span class="ds-department">Research Assistant/Anatomist</span>
+                <p>AI model training for visual cortical mapping at the NYU Winawer Laboratory in Neurobiology. Mapping the V1-3 retinotopic cortex regions.</p>
                 <ul>
                   <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>
                   <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
