--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-      <!-- Google Fots -->
+      <!-- Google Fonts -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -16,6 +16,7 @@
       <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
       <!-- Main CSS -->
       <link href="assets/css/main.css" rel="stylesheet">
+      <link href="assets/css/particles.css" rel="stylesheet">
 
 
     <title>Roland Yan | Welcome</title>
@@ -44,6 +45,10 @@
     </header>
     <!-- header -->
     <!-- banner -->
+    <!-- <div class="canvas-container">
+      <canvas id="canvas"></canvas>
+    </div>
+    -->
     <div class="ds-banner">
       <div class="container">
         <div class="row">
@@ -243,5 +248,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
     <script src="assets/js/main.js"></script>
+    <!-- Particles -->
+    <script src="assets/js/particles.js" defer></script>
   </body>
 </html>
