--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     </header>
     <!-- header -->
     <!-- banner -->
-    <!-- <div class="canvas-container">
+    <div class="canvas-ds-banner section">
       <canvas id="canvas"></canvas>
     </div>
-    -->
+    
     <div class="ds-banner">
       <div class="container">
         <div class="row">
