--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <!-- Main CSS -->
       <link href="assets/css/main.css" rel="stylesheet">
       <link href="assets/css/particles.css" rel="stylesheet">
+      <link rel="stylesheet" href="../unpkg.com/aos%403.0.0-beta.6/dist/aos.css">
 
 
     <title>Roland Yan | Welcome</title>
@@ -223,6 +224,13 @@
      </div>
    </div>
    <!--  Work -->
+
+  <!-- AOS - Animate on scroll library - JS -->
+  <script src="../unpkg.com/aos%403.0.0-beta.6/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+
 
    <!--  footer -->
    <footer class="ds-footer text-center">
