--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="container">
         <section>
             <h2 class="ds-heading">About Me</h2>
-            <p>Hey everyone! I'm Roland (or Ray), a neuroengineering hopeful, futurist, and Technology-lover; dreaming of a cyber-enhanced future. 
+            <p>Hey everyone! I'm Roland (or Ray), a rising neuroengineer, futurist, and Technology-lover; dreaming of a cyber-enhanced future. 
               Innovation excites me, and I never shy away from the dangers of exploration. Join me as I try to improve the world, little by little. </p>
             <div class="ds-button-sec text-center">
                 <a href="resume.pdf" class="ds-button">Download Resume</a>
