--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
                     <span>Experience</span>
                   </li>
                   <li>
-                    <strong>89</strong>
+                    <strong>16</strong>
                     <span>Projects</span>
                   </li>
                   <li>
-                    <strong>52</strong>
-                    <span>Happy Clients</span>
+                    <strong>3</strong>
+                    <span>Publications</span>
                   </li>
                 </ul>
             </section>
@@ -91,7 +91,7 @@
         <section>
             <h2 class="ds-heading">About Me</h2>
             <p>Hey everyone! I'm Roland (or Ray), a rising neuroengineer, futurist, and Technology-lover; dreaming of a cyber-enhanced future. 
-              Innovation excites me, and I never shy away from the dangers of exploration. Join me as I try to improve the world, little by little. </p>
+               I'm an aspiring MD/PHD candidate, and passionate researcher. Innovation excites me, and I never shy away from the dangers of exploration. Join me as I try to improve the world, little by little. </p>
             <div class="ds-button-sec text-center">
                 <a href="resume.pdf" class="ds-button">Download Resume</a>
             </div>
@@ -162,9 +162,37 @@
                 <span class="ds-department">Research Assistant/Anatomist</span>
                 <p>AI model training for visual cortical mapping at the NYU Winawer Laboratory in Neurobiology. Mapping the V1-3 retinotopic cortex regions.</p>
                 <ul>
-                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>
-                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>
+                  <li>Training models with labeled visual cortical maps of the V3-6.</li>
+                  <li>Uses python, docker, git bash.</li>
+                  <li>Predicting hereditcal implications of vision across FMRI brain scans.</li>
+                </ul>
+              </section>
+            </div>
+            <p> &nbsp </p>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+              <section>
+                <span class="ds-year">2019 - 21</span>
+                <h3 class="ds-officename">Columbia University | Earth Institute</h3>
+                <span class="ds-department">Student Researcher</span>
+                <p>Chemical Engineering Student Researcher at Lamont-Doherty Earth Observatory | Columbia University. </p>
+                <ul>
+                  <li>NanoCrystal Technology Research ( Unpublished ): </li>
+                    Using MnOx-CeO2 nanocrystals to filtrate carcinogens and toxins like Aldehydes found in ECigs/Vaporizers.
+                    <p>&nbsp</p>
+                  <li>N95 Mask Reuse Research ( published ):</li>
+                    First to publish research on N95 mask heat disinfection (2 weeks before the CDC). 20k+ reads/downloads. Worked with International Rescue Committee to develop disinfection systems for 90k refugees.
+                </ul>
+              </section>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+              <section>
+                <span class="ds-year">2019 - Present</span>
+                <h3 class="ds-officename">FIRST Robotics</h3>
+                <span class="ds-department">Alumni Mentor</span>
+                <p>As an alumni mentor, I work to support the future generations of FIRST Robotics Competition students within my high school, Clarkstown South, Cyborgs #6969.</p>
+                <ul>
+                  <li>President (2020-21), Mechanical Captain (2018-20)</li>
+                  <li>Mechanical Engineering, Machine Shop, Wood Shop, Computer Vision.</li>
                 </ul>
               </section>
             </div>
@@ -182,7 +210,7 @@
               <div class="row">
                   <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
                       <section>
-                          <h3 class="ds-work-tilte">Tripy mobile app</h3>
+                          <h3 class="ds-work-tilte">Geothermal Energy Heat Exchange Reactor</h3>
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean malesuada eu orci non sodales. </p>
                           <a href="works-setails.html" class="ds-button">Details</a>
                       </section>
@@ -196,7 +224,7 @@
               <div class="row">
                   <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
                       <section>
-                          <h3 class="ds-work-tilte">Hello mobile app</h3>
+                          <h3 class="ds-work-tilte">NanoCrystals for Formaldehyde Filtration</h3>
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean malesuada eu orci non sodales. </p>
                           <a href="works-setails.html" class="ds-button">Details</a>
                       </section>
@@ -210,13 +238,58 @@
               <div class="row">
                   <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
                       <section>
-                          <h3 class="ds-work-tilte">Cute cookies app</h3>
+                          <h3 class="ds-work-tilte">NovaCrypt</h3>
+                          <p>NovaCrypt is an 501(c)3 umbrella nonprofit organization developing impactful open-source research in astronautics, robotics, bioengineering, software development, & artificial intelligence.
+
+                            Through our subsidiaries and programs, students can access large-scale collaborative research projects, and work to develop substantial advancements in technology. 
+                            Ex. Lunar rovers or genetically-modified agriculture, and scalable student impact. </p>
+                          <a href="https://novacrypt.org" class="ds-button">Details</a>
+                      </section>
+                  </div>
+                  <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
+                       <figure><img src="assets/images/work-3.jpg"></figure>
+                  </div>
+              </div>
+            </div>
+            <div class="ds-work-list">
+              <div class="row">
+                  <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
+                      <section>
+                          <h3 class="ds-work-tilte">Mars City State Competition - 1st place ($10k)</h3>
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean malesuada eu orci non sodales. </p>
                           <a href="works-setails.html" class="ds-button">Details</a>
                       </section>
                   </div>
                   <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-                       <figure><img src="assets/images/work-3.jpg"></figure>
+                      <figure><img src="assets/images/work-2.jpg"></figure>
+                  </div>
+              </div>
+            </div>
+            <div class="ds-work-list">
+              <div class="row">
+                  <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
+                      <section>
+                          <h3 class="ds-work-tilte">Medical Organ Delivery Drone</h3>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean malesuada eu orci non sodales. </p>
+                          <a href="works-setails.html" class="ds-button">Details</a>
+                      </section>
+                  </div>
+                  <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
+                      <figure><img src="assets/images/work-2.jpg"></figure>
+                  </div>
+              </div>
+            </div>
+            <div class="ds-work-list">
+              <div class="row">
+                  <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
+                      <section>
+                          <h3 class="ds-work-tilte">NY Academy of Science - Telemedicine</h3>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean malesuada eu orci non sodales. </p>
+                          <a href="works-setails.html" class="ds-button">Details</a>
+                      </section>
+                  </div>
+                  <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
+                      <figure><img src="assets/images/work-2.jpg"></figure>
                   </div>
               </div>
             </div>
