--- a/works-setails.html
+++ b/works-setails.html
@@ -1,116 +1,92 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-      <!-- Google Fots -->
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-      <!-- Remixicon Icon -->
-      <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-      <!-- Remixicon Icon -->
-      <!-- Bootstrap CSS -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-      <!-- Main CSS -->
-      <link href="assets/css/main.css" rel="stylesheet">
-
-
-    <title>Jason Stroff</title>
-  </head>
-  <body>
-   
-    <!-- header -->
-    <header class="ds-header" id="site-header">
-        <div class="container">
-            <div class="ds-header-inner">
-              <!-- logo -->
-              <a href="index.html" class="ds-logo">
-                <span>J</span>Jason Stroff
+<head>
+<!-- Required meta tags -->
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<!-- Google Fots -->
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet"/>
+<!-- Remixicon Icon -->
+<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet"/>
+<!-- Remixicon Icon -->
+<!-- Bootstrap CSS -->
+<link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" rel="stylesheet"/>
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"/>
+<!-- Main CSS -->
+<link href="assets/css/main.css" rel="stylesheet"/>
+<title>Jason Stroff</title>
+</head>
+<body>
+<!-- header -->
+<header class="ds-header" id="site-header">
+<div class="container">
+<div class="ds-header-inner">
+<!-- logo -->
+<a class="ds-logo" href="index.html">
+<span>J</span>Jason Stroff
               </a>
-              <!-- logo -->
-              <!-- social -->
-              <ul class="ds-social">
-                <li><a href="#" target="_blank"><i class="ri-github-fill"></i></a></li>
-                <li><a href="#" target="_blank"><i class="ri-stack-overflow-line"></i></a></li>
-                <li><a href="#" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
-              </ul>
-              <!-- social -->
-            </div>
-        </div>
-    </header>
-    <!-- header -->
-   
-   <main class="ds-main-section">
-     <div class="container">
-        <div class="ds-work-details-section">
-            <div class="text-center">
-              <a href="index.html" class="ds-button ds-arrow-button"><i class="ri-arrow-left-s-line"></i> BAck</a>
-            </div>
-            <div class="row justify-content-center">
-              <div class="col-12 col-sm-12 col-md-10 col-lg-10 col-xl-10 col-xxl-10">
-                  <header class="ds-work-det-hed">
-                      <h1 class="ds-work-det-title">Tripy mobile app</h1>
-                      <span class="ds-work-det-dep">Mobile development - 2019</span>
-                  </header>
-                  <figure><img src="assets/images/work-details-image-1.jpg"></figure>
-                  <div class="ds-work-content-sec">
-                      <div class="row justify-content-center">
-                          <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 col-xxl-8">
-                              <p>Phasellus non faucibus purus, a venenatis diam. In faucibus orci mauris, porttitor egestas diam elementum non. Vestibulum non metus tempus, sagittis libero sed, euismod purus. Cras dolor nulla, hendrerit vitae libero eu, finibus ultricies dolor. Vestibulum non metus tempus, sagittis libero sed, euismod purus. Cras dolor nulla, hendrerit vitae libero eu, finibus ultricies dolor.</p>
-
-                              <p>Curabitur quis tortor sit amet ligula lobortis auctor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer ut turpis eget urna egestas maximus. </p>
-
-                              <h2>Sub Title for project</h2>
-                              <p>Phasellus non faucibus purus, a venenatis diam. In faucibus orci mauris, porttitor egestas diam elementum non. Vestibulum non metus tempus, sagittis libero sed, euismod purus. Cras dolor nulla, hendrerit vitae libero eu, finibus ultricies dolor. Vestibulum non metus tempus, sagittis libero sed, euismod purus. Cras dolor nulla, hendrerit vitae libero eu, finibus ultricies dolor.</p>
-
-                              <ul>
-                                <li>Phasellus non faucibus purus, a venenatis diam. In faucibus orci mauris, porttitor egestas diam elementum non.</li>
-                                 <li>Vestibulum non metus tempus, sagittis libero sed, euismod purus.</li>
-                                 <li>Vestibulum non metus tempus, sagittis libero sed, euismod purus. Cras dolor nulla, hendrerit vitae libero eu, finibus ultricies dolor. Vestibulum non metus tempus.</li>
-                              </ul>
-                          </div>
-                      </div>
-                  </div>
-                 <figure><img src="assets/images/work-details-image-2.jpg"></figure>
-                  <div class="ds-work-content-sec">
-                      <div class="row justify-content-center">
-                          <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 col-xxl-8">
-                              <p>Phasellus non faucibus purus, a venenatis diam. In faucibus orci mauris, porttitor egestas diam elementum non. Vestibulum non metus tempus, sagittis libero sed, euismod purus. Cras dolor nulla, hendrerit vitae libero eu, finibus ultricies dolor. Vestibulum non metus tempus, sagittis libero sed, euismod purus. Cras dolor nulla, hendrerit vitae libero eu, finibus ultricies dolor.</p>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-            </div>
-        </div>
-     </div>
-   </main>
-
-   <!--  footer -->
-   <footer class="ds-footer text-center">
-     <div class="container">
-        <section>
-          <span>Stay in touch</span>
-          <h4>Ready to talk?</h4>
-          <p>Feel free to contact us</p>
-          <a href="mailto:test@test.com" class="ds-button">Lets Talk</a>
-        </section>
-        <span class="ds-copyright">© 2022 All rights reserved. Free minimal bootstrap template by <a href="https://designstub.com/" target="_blank">Designstub</a>.</span>
-     </div>
-   </footer>
-
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+<!-- logo -->
+<!-- social -->
+<ul class="ds-social">
+<li><a href="#" target="_blank"><i class="ri-github-fill"></i></a></li>
+<li><a href="#" target="_blank"><i class="ri-stack-overflow-line"></i></a></li>
+<li><a href="#" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
+</ul>
+<!-- social -->
+</div>
+</div>
+</header>
+<!-- header -->
+<main class="ds-main-section">
+<div class="container">
+<div class="ds-work-details-section">
+<div class="text-center">
+<a class="ds-button ds-arrow-button" href="index.html"><i class="ri-arrow-left-s-line"></i> BAck</a>
+</div>
+<div class="row justify-content-center">
+<div class="col-12 col-sm-12 col-md-10 col-lg-10 col-xl-10 col-xxl-10">
+<header class="ds-work-det-hed">
+<h1 class="ds-work-det-title">Selected Projects</h1>
+<span class="ds-work-det-dep">Research • Engineering • Clinical</span>
+</header>
+<figure><img src="assets/images/work-details-image-1.jpg"/></figure>
+<div class="ds-work-content-sec"><p>Here are a few projects and research themes that represent my recent work.</p><ul><li><strong>Protein Generative AI (Pfizer SGE)</strong> — Built protein generative-AI pipelines using ProGen1, ProtGPT, and RITA, with structure evaluation via AlphaFold2 and PyRosetta.</li><li><strong>DYRK1A Trisomy &amp; Visual Cortical Plasticity</strong> — Down syndrome mouse-model research on synaptic plasticity and cell-type specific mechanisms, including Arc in situ hybridization and pharmacologic rescue.</li><li><strong>Youth-Associated Blood Factors &amp; TIMP2 (Castellano Lab)</strong> — Studying circulating youth-associated factors and TIMP2/ECM microenvironmental effects using parabiosis, microfluidics, and perfusion workflows.</li><li><strong>Soft Robotic Prosthetics &amp; Flexible Biosensors</strong> — Developed silicone pneumatic finger prosthetics and thin, flexible pressure/electro-sensitive biosensors for wearable bio-robotics applications.</li><li><strong>N95 Mask Reuse Disinfection Systems</strong> — Research on scalable disinfection systems for N95 reuse with real-world deployment goals; prior work reached 20k+ reads/downloads.</li><li><strong>Retinotopic Visual Cortex Mapping (Winawer Lab)</strong> — ML-assisted cortical mapping and Docker-based pipelines generating dorsal/ventral visual cortex (V1–V5) maps from ultrahigh-field fMRI datasets.</li></ul><p><a class="ds-button" href="resume.pdf">Download my resume</a></p></div>
+<figure><img src="assets/images/work-details-image-2.jpg"/></figure>
+<div class="ds-work-content-sec">
+<div class="row justify-content-center">
+<div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 col-xxl-8">
+<p>Phasellus non faucibus purus, a venenatis diam. In faucibus orci mauris, porttitor egestas diam elementum non. Vestibulum non metus tempus, sagittis libero sed, euismod purus. Cras dolor nulla, hendrerit vitae libero eu, finibus ultricies dolor. Vestibulum non metus tempus, sagittis libero sed, euismod purus. Cras dolor nulla, hendrerit vitae libero eu, finibus ultricies dolor.</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</main>
+<!--  footer -->
+<footer class="ds-footer text-center">
+<div class="container">
+<section>
+<span>Stay in touch</span>
+<h4>Ready to talk?</h4>
+<p>Feel free to contact us</p>
+<a class="ds-button" href="mailto:roland.yan@icahn.mssm.edu">Lets Talk</a>
+</section>
+<span class="ds-copyright">© 2026 All rights reserved. Free minimal bootstrap template by <a href="https://designstub.com/" target="_blank">Designstub</a>.</span>
+</div>
+</footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- Option 1: Bootstrap Bundle with Popper -->
+<script crossorigin="anonymous" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Option 2: Separate Popper and Bootstrap JS -->
+<!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
-    <script src="assets/js/main.js"></script>
-  </body>
+<script src="assets/js/main.js"></script>
+</body>
 </html>
