--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <section>
 <h1>
 <span>HELLO!</span>
-                  I’m <strong>Roland Yan </strong><br/> Neuroscience researcher and graduate student at Mount Sinai.
+                  I’m <strong>Roland Yan,</strong><br/> neuroscience researcher and graduate student at Mount Sinai.
                 </h1>
 <ul class="ds-numbervalulist">
 <li>
