--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
 <!-- Required meta tags -->
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
+
+<meta name="description" content="Roland Yan is a neuroscience researcher and MSBS graduate student at the Icahn School of Medicine at Mount Sinai. Research in aging, ApoE plasma proteomics, and machine-learning morphology pipelines. EMT and aspiring MD/PhD candidate."/>
+<meta name="keywords" content="Roland Yan, neuroscience researcher, Mount Sinai, Icahn School of Medicine, MSBS, ApoE, plasma proteomics, microglia, machine learning, image analysis, EMT, MD/PhD"/>
+<meta name="author" content="Roland Yan"/>
+<meta name="robots" content="index, follow"/>
+<link rel="canonical" href="https://rolandyan.com"/>
+
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="Roland Yan | Neuroscience Researcher & MSBS Student at Mount Sinai"/>
+<meta property="og:description" content="Neuroscience researcher and graduate student at Mount Sinai. Aging, ApoE plasma proteomics, and ML morphology pipelines. EMT and aspiring MD/PhD candidate."/>
+<meta property="og:type" content="website"/>
+<meta property="og:url" content="https://roland-yan.github.io/website/"/>
+<meta property="og:image" content="https://roland-yan.github.io/website/assets/images/profile-image.jpg"/>
+<meta property="og:image:alt" content="Headshot of Roland Yan"/>
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:title" content="Roland Yan | Neuroscience Researcher & MSBS Student at Mount Sinai"/>
+<meta name="twitter:description" content="Neuroscience researcher and graduate student at Mount Sinai. Aging, ApoE plasma proteomics, and ML morphology pipelines. EMT and aspiring MD/PhD candidate."/>
+<meta name="twitter:image" content="https://roland-yan.github.io/website/assets/images/profile-image.jpg"/>
+
+<meta name="theme-color" content="#ffffff"/>
+
+<!-- Icons -->
+<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png"/>
+<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png"/>
+<link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png"/>
+<link rel="manifest" href="site.webmanifest"/>
+
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "Person", "name": "Roland Yan", "url": "https://roland-yan.github.io/website/", "image": "https://roland-yan.github.io/website/assets/images/profile-image.jpg", "description": "Neuroscience researcher and MSBS graduate student at the Icahn School of Medicine at Mount Sinai. EMT and aspiring MD/PhD candidate.", "affiliation": {"@type": "CollegeOrUniversity", "name": "Icahn School of Medicine at Mount Sinai"}, "alumniOf": {"@type": "CollegeOrUniversity", "name": "NYU Tandon School of Engineering"}, "sameAs": ["https://github.com/roland-yan", "https://www.linkedin.com/in/roland-yan/", "https://www.instagram.com/rolandyan2.0/"]}
+</script>
+
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
@@ -19,7 +51,7 @@
 <link href="assets/css/main.css" rel="stylesheet"/>
 <link href="assets/css/particles.css" rel="stylesheet"/>
 <link href="../unpkg.com/aos%403.0.0-beta.6/dist/aos.css" rel="stylesheet"/>
-<title>Roland Yan | Welcome</title>
+<title>Roland Yan | Neuroscience Researcher & MSBS Student at Mount Sinai</title>
 </head>
 <body>
 <!-- header -->
@@ -59,7 +91,7 @@
 <section>
 <h1>
 <span>HELLO!</span>
-                  I’m <strong>Roland Yan,</strong><br/> neuroscience researcher and graduate student at Mount Sinai.
+                  I’m <strong>Roland Yan </strong><br/> Neuroscience researcher and graduate student at Mount Sinai.
                 </h1>
 <ul class="ds-numbervalulist">
 <li>
