--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
 <section>
 <span class="ds-year">Mar 2025 – Present</span>
 <h3 class="ds-officename">SeniorCare EMS</h3>
-<span class="ds-department">911 Emergency Medical Technician (EMT)</span>
-<p>ALS operator supporting paramedic-led emergencies and 911 BLS across NYC hospital systems.</p>
+<span class="ds-department">Emergency Medical Technician (EMT)</span>
+<p>ALS operator supporting paramedic-led emergencies and BLS transport across NYC hospital systems.</p>
 <ul>
-<li>ALS emergencies with paramedics; standard 911 BLS emergencies at SBH.</li>
+<li>ALS emergencies with paramedics; standard BLS calls and patient transport.</li>
 <li>Strike shifts focused on 911 BLS emergencies; assessment, documentation, and teamwork.</li>
 </ul>
 </section>
