--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
 <span class="ds-year">Sep 2025 – Present</span>
 <h3 class="ds-officename">Mount Sinai | Castellano Laboratory</h3>
 <span class="ds-department">Graduate Student Researcher</span>
-<p>Researching youth-associated blood-borne factors in mice and TIMP2/ECM mechanisms using parabiosis, microfluidics, perfusions, and structural experiments.</p>
+<p>Researching youth-associated blood-borne factors in mice and ApoE3/4 mechanisms using parabiosis, microfluidics, perfusions, and structural experiments.</p>
 <ul>
-<li>Parabiosis + microfluidics + perfusion workflows to profile circulating youth-associated factors.</li>
-<li>Structural/ECM experiments studying TIMP2’s microenvironmental impact on development.</li>
+<li>Wetlab orkflows to profile circulating youth-associated factors, focusing on Microglial and OPC interactions.</li>
+<li>Structural/ECM experiments studying ApoE peripheral environment and its impact on brain function.</li>
 </ul>
 </section>
 </div>
