--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <meta name="keywords" content="Roland Yan, neuroscience researcher, Mount Sinai, Icahn School of Medicine, MSBS, ApoE, plasma proteomics, microglia, machine learning, image analysis, EMT, MD/PhD"/>
 <meta name="author" content="Roland Yan"/>
 <meta name="robots" content="index, follow"/>
-<link rel="canonical" href="https://rolandyan.com"/>
+<link rel="canonical" href="https://rolandyan.com/"/>
 
 <!-- Open Graph / Facebook -->
 <meta property="og:title" content="Roland Yan | Neuroscience Researcher & MSBS Student at Mount Sinai"/>
 <meta property="og:description" content="Neuroscience researcher and graduate student at Mount Sinai. Aging, ApoE plasma proteomics, and ML morphology pipelines. EMT and aspiring MD/PhD candidate."/>
 <meta property="og:type" content="website"/>
-<meta property="og:url" content="https://roland-yan.github.io/website/"/>
+<meta property="og:url" content="https://rolandyan.com/"/>
 <meta property="og:image" content="https://roland-yan.github.io/website/assets/images/profile-image.jpg"/>
 <meta property="og:image:alt" content="Headshot of Roland Yan"/>
 
@@ -34,7 +34,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png"/>
 <link rel="manifest" href="site.webmanifest"/>
 
-<script type="application/ld+json">{"@context": "https://schema.org", "@type": "Person", "name": "Roland Yan", "url": "https://roland-yan.github.io/website/", "image": "https://roland-yan.github.io/website/assets/images/profile-image.jpg", "description": "Neuroscience researcher and MSBS graduate student at the Icahn School of Medicine at Mount Sinai. EMT and aspiring MD/PhD candidate.", "affiliation": {"@type": "CollegeOrUniversity", "name": "Icahn School of Medicine at Mount Sinai"}, "alumniOf": {"@type": "CollegeOrUniversity", "name": "NYU Tandon School of Engineering"}, "sameAs": ["https://github.com/roland-yan", "https://www.linkedin.com/in/roland-yan/", "https://www.instagram.com/rolandyan2.0/"]}
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "Person", "name": "Roland Yan", "url": "https://rolandyan.com/", "image": "https://roland-yan.github.io/website/assets/images/profile-image.jpg", "description": "Neuroscience researcher and MSBS graduate student at the Icahn School of Medicine at Mount Sinai. EMT and aspiring MD/PhD candidate.", "affiliation": {"@type": "CollegeOrUniversity", "name": "Icahn School of Medicine at Mount Sinai"}, "alumniOf": {"@type": "CollegeOrUniversity", "name": "NYU Tandon School of Engineering"}, "sameAs": ["https://github.com/roland-yan", "https://www.linkedin.com/in/roland-yan/", "https://www.instagram.com/rolandyan2.0/"]}
 </script>
 
 <!-- Google Fonts -->
@@ -60,7 +60,7 @@
 <div class="ds-header-inner">
 <!-- logo -->
 <a class="ds-logo" href="index.html">
-<span>R</span>Roland Yan
+<span class="ds-logo-mark"><img src="assets/images/logo-dna.png" alt="Logo"/></span>Roland Yan
               </a>
 <!-- logo -->
 <!-- social -->
@@ -175,10 +175,10 @@
 <span class="ds-year">Sep 2025 – Present</span>
 <h3 class="ds-officename">Mount Sinai | Castellano Laboratory</h3>
 <span class="ds-department">Graduate Student Researcher</span>
-<p>Researching youth-associated blood-borne factors in mice and ApoE3/4 mechanisms using parabiosis, microfluidics, perfusions, and structural experiments.</p>
+<p>Researching peripheral blood-borne factors in ApoE context mice and LGALS3 mechanisms using parabiosis, microfluidics, perfusions, and structural experiments.</p>
 <ul>
-<li>Wetlab orkflows to profile circulating youth-associated factors, focusing on Microglial and OPC interactions.</li>
-<li>Structural/ECM experiments studying ApoE peripheral environment and its impact on brain function.</li>
+<li>Parabiosis + plasma injections + microfluidics + perfusion workflows to profile circulating peripheral Apoe4 factors that impact the brain.</li>
+<li>Developed machine-learning based morphology pipelines for automated analysis of Microglia and OLs</li>
 </ul>
 </section>
 </div>
@@ -199,10 +199,10 @@
 <span class="ds-year">Mar 2025 – Present</span>
 <h3 class="ds-officename">SeniorCare EMS</h3>
 <span class="ds-department">Emergency Medical Technician (EMT)</span>
-<p>ALS operator supporting paramedic-led emergencies and BLS transport across NYC hospital systems.</p>
+<p>911 BLS EMT at Saint Barnabas Hospital and ALS operator supporting paramedic-led emergencies across NYC hospital systems.</p>
 <ul>
-<li>ALS emergencies with paramedics; standard BLS calls and patient transport.</li>
-<li>Strike shifts focused on 911 BLS emergencies; assessment, documentation, and teamwork.</li>
+<li> 911 standard BLS calls through Saint Barnabas Hospital NYC.</li>
+<li>ALS emergencies with paramedics, operator and tech for complex ALS transports</li>
 </ul>
 </section>
 </div>
