--- a/works-setails.html
+++ b/works-setails.html
@@ -5,6 +5,38 @@
 <!-- Required meta tags -->
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
+
+<meta name="description" content="Selected projects and research themes from Roland Yan, neuroscience researcher and Mount Sinai MSBS graduate student."/>
+<meta name="keywords" content="Roland Yan, neuroscience researcher, Mount Sinai, Icahn School of Medicine, MSBS, ApoE, plasma proteomics, microglia, machine learning, image analysis, EMT, MD/PhD"/>
+<meta name="author" content="Roland Yan"/>
+<meta name="robots" content="index, follow"/>
+<link rel="canonical" href="https://rolandyan.com/"/>
+
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="Roland Yan | Selected Projects"/>
+<meta property="og:description" content="Selected projects spanning neuroscience research, engineering, and clinical experiences."/>
+<meta property="og:type" content="website"/>
+<meta property="og:url" content="https://rolandyan.com/"/>
+<meta property="og:image" content="https://roland-yan.github.io/website/assets/images/profile-image.jpg"/>
+<meta property="og:image:alt" content="Headshot of Roland Yan"/>
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:title" content="Roland Yan | Selected Projects"/>
+<meta name="twitter:description" content="Selected projects spanning neuroscience research, engineering, and clinical experiences."/>
+<meta name="twitter:image" content="https://roland-yan.github.io/website/assets/images/profile-image.jpg"/>
+
+<meta name="theme-color" content="#ffffff"/>
+
+<!-- Icons -->
+<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png"/>
+<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png"/>
+<link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png"/>
+<link rel="manifest" href="site.webmanifest"/>
+
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "Person", "name": "Roland Yan", "url": "https://rolandyan.com/", "image": "https://roland-yan.github.io/website/assets/images/profile-image.jpg", "description": "Neuroscience researcher and MSBS graduate student at the Icahn School of Medicine at Mount Sinai. EMT and aspiring MD/PhD candidate.", "affiliation": {"@type": "CollegeOrUniversity", "name": "Icahn School of Medicine at Mount Sinai"}, "alumniOf": {"@type": "CollegeOrUniversity", "name": "NYU Tandon School of Engineering"}, "sameAs": ["https://github.com/roland-yan", "https://www.linkedin.com/in/roland-yan/", "https://www.instagram.com/rolandyan2.0/"]}
+</script>
+
 <!-- Google Fots -->
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
@@ -17,7 +49,7 @@
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"/>
 <!-- Main CSS -->
 <link href="assets/css/main.css" rel="stylesheet"/>
-<title>Jason Stroff</title>
+<title>Roland Yan | Selected Projects</title>
 </head>
 <body>
 <!-- header -->
@@ -26,14 +58,14 @@
 <div class="ds-header-inner">
 <!-- logo -->
 <a class="ds-logo" href="index.html">
-<span>J</span>Jason Stroff
+<span class="ds-logo-mark"><img src="assets/images/logo-dna.png" alt="Logo"/></span>Roland Yan
               </a>
 <!-- logo -->
 <!-- social -->
 <ul class="ds-social">
-<li><a href="#" target="_blank"><i class="ri-github-fill"></i></a></li>
-<li><a href="#" target="_blank"><i class="ri-stack-overflow-line"></i></a></li>
-<li><a href="#" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
+<li><a href="https://github.com/roland-yan" target="_blank"><i class="ri-github-fill"></i></a></li>
+<li><a href="resume.pdf" target="_blank"><i class="ri-pages-line"></i></a></li>
+<li><a href="https://www.linkedin.com/in/roland-yan/" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
 </ul>
 <!-- social -->
 </div>
